# $Id: configure.in,v 1.12 2004/01/04 15:55:15 erik Exp $

AC_INIT(src/main.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(bmud, 0.6)

AC_PROG_CC
AC_PROG_INSTALL

AC_DEFINE(USE_GNOME,,[Use GNOME Framework])
CFLAGS="$CFLAGS `pkg-config --cflags libgnomeui-2.0`"
LIBS="$LIBS `pkg-config --libs libgnomeui-2.0`"

AC_ARG_ENABLE(guile,
[  --enable-guile          Use GNU Guile for scripting [default=yes]],
	, guile=yes)
if test x$guile = xyes; then
	AC_MSG_CHECKING(for Guile)

	AC_DEFINE(USE_GUILE,,[Guile for scripting])
	GUILE_CFLAGS=`guile-config compile`
	GUILE_LIBS=`guile-config link`
	CFLAGS="$CFLAGS $GUILE_CFLAGS"
	LIBS="$LIBS $GUILE_LIBS"
	AC_MSG_RESULT(yes)
fi

AC_ARG_ENABLE(perl,
[  --enable-perl           Use PERL for scripting [default=yes]],
	, perl=yes)
if test x$perl = xyes; then
	AC_MSG_CHECKING(for PERL)
	AC_DEFINE(USE_PERL,,[perl for scripting])
	PERL_CFLAGS=`perl -MExtUtils::Embed -e ccopts`
	PERL_LIBS=`perl -MExtUtils::Embed -e ldopts`
	CFLAGS="$CFLAGS $PERL_CFLAGS"
	LIBS="$LIBS $PERL_LIBS"
	AC_MSG_RESULT(yes)
fi

AC_OUTPUT(Makefile data/Makefile doc/Makefile src/Makefile bmud.spec bmud.lsm)
